--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1 class="logo-header">
           <span class="animated">Omar</span><span id="dev-color" class="animated">.Dev</span>
       </h1>
-  </div>
+     </div>
 
       <!-- animated intro  end  -->
 
@@ -26,6 +26,6 @@
 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/src/script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
